[tool.poetry]
name = "pool-test"
version = "0.1.0"
description = ""
authors = ["Thúlio Costa <thulio@thuliocosta.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
bandit = "^1.6.2"
pylint = "^2.4.4"
pylint_venv = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
